# powerlow-fit-wwt-nets

./: powerlaw_fit_stapp.py  powerlaw_testing_wwt.ipynb  pyproject.toml  requirements.txt
Data/Wastewater/: .~lock.Wastewater_cclasso_047_degree_distribution.csv#  Wastewater_cclasso_010_degree_distribution.csv  Wastewater_cclasso_020_degree_distribution.csv  Wastewater_cclasso_030_degree_distribution.csv  Wastewater_cclasso_040_degree_distribution.csv  Wastewater_cclasso_045_degree_distribution.csv  Wastewater_cclasso_047_degree_distribution.csv  Wastewater_cclasso_050_degree_distribution.csv
Data/Wastewater_Activated_Sludge/: Wastewater_Activated_Sludge_cclasso_010_degree_distribution.csv  Wastewater_Activated_Sludge_cclasso_020_degree_distribution.csv  Wastewater_Activated_Sludge_cclasso_030_degree_distribution.csv  Wastewater_Activated_Sludge_cclasso_040_degree_distribution.csv  Wastewater_Activated_Sludge_cclasso_045_degree_distribution.csv  Wastewater_Activated_Sludge_cclasso_047_degree_distribution.csv  Wastewater_Activated_Sludge_cclasso_050_degree_distribution.csv
Data/Wastewater_Industrial_wastewater/: Wastewater_Industrial_wastewater_cclasso_010_degree_distribution.csv  Wastewater_Industrial_wastewater_cclasso_020_degree_distribution.csv  Wastewater_Industrial_wastewater_cclasso_030_degree_distribution.csv  Wastewater_Industrial_wastewater_cclasso_040_degree_distribution.csv  Wastewater_Industrial_wastewater_cclasso_045_degree_distribution.csv  Wastewater_Industrial_wastewater_cclasso_047_degree_distribution.csv  (+1 more)
(+6 files in other folders)
