[tool.poetry]
name = "powerlaw-wwt"
version = "0.1.0"
description = "Script to fit power low based on the degree distribution of networks"
authors = ["sayalaruano <sebasar1245@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
powerlaw = "^1.5"
pandas = "^2.2.1"
numpy = "^1.26.4"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
streamlit = "^1.31.1"
plotly = "^5.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
